Update ChatGPT script
Output chatGPT call results to a file for every call to avoid losing the work if process interrupted.

--- a/chatgpt.ipynb
+++ b/chatgpt.ipynb
@@ -113,7 +113,10 @@
     "POS_FILTER = set(['CC','DT','IN','JJ','JJR','JJS','MD','PDT','PRP','PRP$','RB','RBR','RBS','RP','VB','VBD','VBG','VBN','VBP','VBZ','WDT','WP','WRB'])\n",
     "\n",
     "# Chat GPT prompt used when calling chatGPT for text editting\n",
-    "prompt = \"Please edit the following paragraphs to sound more refined for a blog post.\\r\\n\\r\\n\""
+    "prompt = \"Please edit the following paragraphs to sound more refined for a blog post.\\r\\n\\r\\n\"\n",
+    "\n",
+    "# output file name after calling chatgpt\n",
+    "output_file = 'chatgpt.csv'"
    ]
   },
   {
@@ -149,7 +152,8 @@
     "        source_df = pd.concat([source_df,pd.read_csv(SOURCE_FOLDER + source)], axis=0)\n",
     "\n",
     "source_df = source_df.reset_index()\n",
-    "source_df = source_df.rename(columns={'content': 'content orig'})\n"
+    "source_df = source_df.rename(columns={'content': 'content orig'})\n",
+    "source_df['content mod'] = \"\"\n"
    ]
   },
   {
@@ -160,43 +164,22 @@
    "outputs": [],
    "source": [
     "#Filter the source dataframe articles as needed. This is done to reduce # of chatGPT calls\n",
-    "\n",
-    "chatgpt_df = source_df.loc[source_df['date'].str.contains('2022-01'),:]\n"
+    "#source_df = source_df.loc[source_df['date'].str.contains('2022-01'),:]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "a6568d72-b152-44be-9f7a-4a490a7855fc",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: total: 438 ms\n",
-      "Wall time: 46min 8s\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<timed exec>:15: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
-    "# Small function used to call chatGPT\n",
-    "def modify_with_chatgpt(row):\n",
-    "    content = \"Please edit the following paragraphs to sound more refined for a blog post.\\r\\n\\r\\n\" + row['content']\n",
+    "\n",
+    "def modify_with_chatgpt(content):\n",
+    "    content = \"Please edit the following paragraphs to sound more refined for a blog post.\\r\\n\\r\\n\" + content\n",
     "    completion = client.chat.completions.create(\n",
     "      model=\"gpt-3.5-turbo\",\n",
     "      messages=[\n",
@@ -206,20 +189,15 @@
     "    return completion.choices[0].message.content\n",
     "\n",
     "\n",
-    "# Call chatGPT against all rows and save them to \"content mod\" column\n",
-    "chatgpt_df['content mod'] = test_df.apply(modify_with_chatgpt, axis=1)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4a65cd2e-d659-473f-aa38-0f56d2871689",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Save to CSV \n",
-    "chatgpt_df.to_csv(\"chatgpt_df.csv\")"
+    "with open(output_file, \"a\",encoding=\"utf-8\") as file:\n",
+    "    writer = csv.writer(file, dialect='excel')\n",
+    "    if (os.path.getsize(output_file) == 0):\n",
+    "        writer.writerow(['index','url','tag','date','content orig', 'content mod'])\n",
+    "    for index,row in source_df.iterrows():\n",
+    "        modified_content = modify_with_chatgpt(row['content orig'])\n",
+    "        row['content mod'] = modified_content\n",
+    "        writer.writerow(row)\n",
+    "    file.close()"
    ]
   },
   {
